--- a/client-app/public/index.html
+++ b/client-app/public/index.html
@@ -26,9 +26,14 @@
 </head>
 
 <body>
+  <style>
+    .active-spinner {
+      display: flex !important
+    }
+  </style>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root">
-    <div class="ui active transition visible inverted dimmer" style="display: flex !important;">
+    <div class="ui active transition visible inverted dimmer active-spinner">
       <div class="content">
         <div class="ui text loader">Loading app...</div>
       </div>
